gobmkida/g2/edge_clamp_moves
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/edge_clamp_moves/src/engine/reading.c:2618:7: error: use of undeclared identifier 'dword_76BCFC'
v10 = dword_76BCFC[v7]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/edge_clamp_moves/src/engine/reading.c:2635:6: error: use of undeclared identifier 'dword_76BCFC'
up = dword_76BCFC[v7]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/edge_clamp_moves/src/obj/1/reading.o] Error 1
